fix(chrome): add compability for chrome

--- a/views/preferences.html
+++ b/views/preferences.html
@@ -9,7 +9,7 @@
   <body>
     <b>Coming Soon</b><br>
     Still no preferences here!<br><br>
-    <h6>This addon is on alpha version, please contribute on <a href="">github</a></h6>
+    <h6>This addon is on alpha version, please contribute on <a target="_blank" href="https://github.com/pnicorelli/scepticism">github</a></h6>
   </body>
 
 </html>
